--- a/demo/index.html
+++ b/demo/index.html
@@ -10,5 +10,5 @@
     </head>
     <body>
     </body>
-    <script src="main.js"></script>
+    <script type="module" src="app.js"></script>
 </html>
